# Deeplearning3

./: .gitignore  README.md  benchmark.py  curriculum_train.py  demo.py  evaluate.py  pyproject.toml  requirements.txt  setup.py  test_training_startup.py  train.py  train_coco.py  train_pc.py
.github/workflows/: ci.yml
gaussian_encoder/: __init__.py  model.py  train.py
hpwm/: __init__.py  config.py  data.py  evaluate.py  model.py  train.py
hpwm/components/: __init__.py  _dino_fallback.py  mod_router.py  multiscale_attn.py  slot_encoder.py  temporal_state.py  vqvae.py
lgq/: __init__.py  config.py  evaluate.py  losses.py  metrics.py  model.py  quantizer.py  train.py
omnilatent/: __init__.py  config.py  utils.py
omnilatent/data/: __init__.py  registry.py
omnilatent/data/collate/: __init__.py
omnilatent/data/datasets/: __init__.py
omnilatent/data/transforms/: __init__.py
omnilatent/model/: __init__.py  backbone.py  decoders.py  encoders.py  hooks.py  layers.py  masking.py  omnilatent.py  reasoning.py  temporal.py
omnilatent/model/adapters/: __init__.py  base.py  queries.py
omnilatent/training/: __init__.py  coco_dataset.py  data.py  losses.py  metrics.py  pdf_dataset.py  predictive_coding.py  sampler.py  trainer.py  video_dataset.py
tests/: test_component_diagnostics.py  test_gradient_flow.py  test_hooks.py  test_hpwm_jaccard.py  test_lgq.py  test_model.py  test_pdf_dataset.py  test_predictive_coding.py  test_reasoning.py  test_refactor_fixes.py  test_temporal_context.py  test_video_watching.py
