[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "omnilatent"
version = "0.1.0"
description = "OmniLatent: All-to-all multimodal AI with Latent Neural Hooks"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
coco = [
    "torchvision>=0.16.0",
    "Pillow>=9.0",
]
audio = [
    "torchaudio>=2.1.0",
]
video = [
    "torchaudio>=2.1.0",
    "torchvision>=0.16.0",
]
pdf = [
    "PyMuPDF>=1.23.0",
]
all = [
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "Pillow>=9.0",
    "PyMuPDF>=1.23.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["omnilatent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
